# telescopio-soul

./: CMakeLists.txt  README.md  main.cpp
lib/: stb_image_write.h
src/: main.cpp
